@@ -1,4 +1,10 @@
 ==================================
+Rilascio v2.0.13    del 08/06/2017
+==================================
+
+Aggiunta a RYWINZ la funzione di preview di documenti.
+
+==================================
 Rilascio v2.0.12    del 07/06/2017
 ==================================
 
